2011-06-04  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (toplevel):
	(run-lisp-indent-tests): Better named-lambda and
	destructuring-bind indenation.

2011-05-31  Stas Boukarev  <stassats@gmail.com>

	* slime-package-fu.el (slime-export-symbol-representation-auto):
	New variable. Default value is t.
	Determine automatically which style is used for symbols, #: or :
	If it's mixed or no symbols are exported so far,
	use `slime-export-symbol-representation-function'.

2011-05-26  Stas Boukarev  <stassats@gmail.com>

	* slime-package-fu.el (slime-add-export): Add :export to the end
	of a defpackage form when there's no :export present.

2011-05-21  Helmut Eller  <heller@common-lisp.net>

	* slime-snapshot.el: License is GPL.

2011-05-21  Helmut Eller  <heller@common-lisp.net>

	* swank-indentation.lisp: Provide :swank-indentation.
	Reported by Robert Brown

2011-05-19  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (common-lisp-indent-function-1)
	(lisp-align-keywords-in-calls): Support for aligning keyword
	arguments in calls.
	(lisp-lambda-list-indentation, lisp-indent-lambda-list)
	(run-lisp-indent-tests): Support for turning off the
	fancy lambda-list indentation.

2011-05-18  Nikodemus Siivola  <nikodemus@solipsist>

	* slime-cl-indent.el (lisp-indent-defsetf, run-lisp-indent-tests):
	Better DEFSETF indentation: support both long and short forms.

2011-05-17  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (run-lisp-indent-tests, lisp-indent-loop): Fix
	indentation of function calls, etc, inside loop forms.

2011-05-16  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (lisp-loop-indent-forms-like-keywords)
	(common-lisp-loop-part-indentation, run-lisp-indent-tests): Cater
	to loop indentation style that prefers to align forms with keywords.
	Activated by setting lisp-loop-indent-forms-like-keywords to t,
	and lisp-loop-indent-subclauses to nil.
